[package]
name = "cls"
version = "0.2.1"
edition = "2018"

# binary could be the cls command line tool?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cls_ffi"
crate-type = ["cdylib"]

[dependencies]
libc = "*"
once_cell = "1.8.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.2.16"
dirs = "3.0.2"
dialoguer = "0.8.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
atty = "0.2"
